<resources>
    <string name="app_name">Minha Viagem</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Global strings - begin -->
    <string name="lbl_save">Salvar</string>
    <string name="lbl_exit">Sair</string>
    <string name="lbl_remove">Remover</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_options">Opções</string>
    <string name="lbl_sim">Sim</string>
    <string name="lbl_nao">Não</string>
    <string name="lbl_save_success">Registro salvo</string>
    <string name="lbl_save_failed">Falha ao salvar</string>
    <string name="lbl_error_select">Erro ao selecionar</string>

    <string name="drawer_open">1</string>
    <string name="drawer_close">0</string>
    <!-- Global strings - end -->

    <!-- Login - begin -->
    <string name="lbl_login_user">Usuário</string>
    <string name="lbl_password_user">Senha</string>
    <string name="lbl_enter">Entrar</string>
    <string name="lbl_invalid_autenthication">Usuário ou senha inválidos!</string>
    <string name="lbl_stay_connected">Manter conectado</string>
    <!-- Login - end -->

    <!-- Dashboard - begin -->
    <string name="lbl_new_cost">Nova Despesa</string>
    <string name="lbl_new_travel">Nova Viagem</string>
    <string name="lbl_my_travels">Minhas Viagens</string>
    <string name="lbl_settings">Configurações</string>
    <!-- Dashboard - end -->

    <!-- New Travel - begin -->
    <string name="lbl_destiny">Destino</string>
    <string name="lbl_travel_type">Tipo da Viagem</string>
    <string name="lbl_recreation">Lazer</string>
    <string name="lbl_business">Negócios</string>
    <string name="lbl_date_arrival">Data Chegada</string>
    <string name="lbl_date_exit">Data Saída</string>
    <string name="lbl_selecione">Selecione</string>
    <string name="lbl_budget">Orçamento</string>
    <string name="lbl_amount_people">Quantidade de Pessoas</string>
    <string name="lbl_people_number">Número de Pessoas</string>
    <string name="lbl_delete_confirm_travel">Deseja remover a viagem?</string>
    <!-- New Travel - end -->

    <!-- New Cost - begin -->
    <string name="lbl_value">Valor</string>
    <string name="lbl_date">Data</string>
    <string name="lbl_description">Descrição</string>
    <string name="lbl_place">Local</string>
    <string name="lbl_category">Categoria</string>
    <string name="lbl_performed_costs">Gastos realizados</string>
    <string-array name="costCategory">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>
    <!-- New Cost - end -->

    <!-- Mod Preference - begin -->
    <string name="lbl_mod_travel">Modo viagem</string>
    <string name="lbl_preference">Preferências</string>
    <string name="lbl_mod_travel_summary">Determina a viagem ativa com base na data atual</string>
    <string name="lbl_limit_value">Informe valor limite (em %)</string>
    <string name="lbl_limit_value_summary">Notifica quando os gastos ultrapassarem o percentual informado</string>
    <string name="lbl_costs_alert">Alerta de gastos</string>
    <!-- Mod Preference - end -->


</resources>
