<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488"
            android:orientation="vertical">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lbl_new_cost"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/costDestinoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </LinearLayout>

        <TableLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">

             <TableRow>
                 <TextView android:text="@string/lbl_value"/>

                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/lbl_date"/>
             </TableRow>

            <TableRow>
                <EditText android:id="@+id/valueId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

                <Button android:id="@+id/btnDataId"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="selectDate"
                    android:text="@string/lbl_selecione"/>
            </TableRow>

        </TableLayout>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_description"/>

        <EditText android:id="@+id/descriptionId"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lbl_place"/>

        <EditText android:id="@+id/placeId"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/lbl_category" />

        <Spinner android:id="@+id/categoryId"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:prompt="@string/lbl_category">
        </Spinner>

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveCost"
            android:text="@string/lbl_save"/>

    </LinearLayout>

</ScrollView>