<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Visual fields - begin-->

    <!-- Logo - begin -->
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="top"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo2"/>
    <!-- Logo - end -->

    <!-- Login - begin -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login_user" />

    <EditText android:id="@+id/loginUserId"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text">
        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_password_user"/>

    <EditText android:id="@+id/passwordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />
    <!-- Login - end -->

    <!-- CheckBox - begin -->
    <CheckBox android:id="@+id/loginCheckBoxId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_stay_connected"/>

    <!-- CheckBox - end -->

    <!-- Login Button - begin -->
    <Button android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_enter"
        android:onClick="enterOnClick" />
    <!-- Login Button - end -->

    <!-- Visual fields - end -->
</LinearLayout>
